# STL_Generator-QGIS_Plugin

./: .gitignore  LICENSE  README.md  __init__.py  dem2stl.py  dem2stl_dialog.py  dem2stl_dialog_base.ui  generate_mesh.py  index.html  mesh_generator.py  metadata.txt  pb_tool.cfg  preview_window.py  preview_window_ui.py  resources.py  resources.qrc  resources_rc.py  stl_generator.py  stl_generator_dialog.py  stl_generator_dialog_base.ui  stl_generator_dialog_base_ui.py
.qt_for_python/rcc/: resources.py
.qt_for_python/uic/: dem2stl_dialog_base.py  stl_generator_dialog_base.py
C_library/: MeshGenerator.exp  MeshGenerator.lib
backend/: MeshGenerator.exp
backend/MeshGenerator/: CMakeLists.txt  MeshGenerator_global.h  build-library.sh  meshgenerator.cpp  meshgenerator.h
backend/MeshGenerator/lib/: MeshGenerator.lib
backend/MeshGenerator/src/: CMakeLists.txt  meshgenerator.cpp  meshgenerator.h
help/source/: conf.py  index.rst
processing_provider/: provider.py  split_stl_using_vector.py  split_then_generate_stl.py  stl_from_features_bed_size.py  stl_from_features_total_size.py  stl_from_raster.py
test/: test_dem2stl_dialog.py  test_resources.py  test_stlgenerator_dialog.py
